--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
     background-color: rgba(42, 32, 32, 0.603);
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 0;
 }
 html { 
     overflow-y: hidden; 
@@ -10,4 +9,38 @@ html {
 #gameBoard {
     display: flex;
     justify-content: center;
+    margin-top: 0px;
 }
+#scoreCard {
+    display: flex;
+    justify-content: center;
+    height: 50px;
+}
+
+#card{
+    margin-top: 16px;
+    margin-bottom: 16px;
+    color: #c6e2ff;
+    animation: neon 1.3s ease-in-out infinite alternate;
+}
+
+@keyframes neon {
+    from {
+      text-shadow:
+      0 0 6px rgba(202,228,225,0.92),
+      0 0 30px rgba(202,228,225,0.34),
+      0 0 12px rgba(30,132,242,0.52),
+      0 0 21px rgba(30,132,242,0.92),
+      0 0 34px rgba(30,132,242,0.78),
+      0 0 54px rgba(30,132,242,0.92);
+    }
+    to {
+      text-shadow:
+      0 0 6px rgba(202,228,225,0.98),
+      0 0 30px rgba(202,228,225,0.42),
+      0 0 12px rgba(30,132,242,0.58),
+      0 0 22px rgba(30,132,242,0.84),
+      0 0 38px rgba(30,132,242,0.88),
+      0 0 60px rgba(30,132,242,1);
+    }
+  }
